# aegis-code

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aegis_code/: __init__.py  aegis_adapter.py  aegis_client.py  batch_executor.py  batch_schema.py  budget.py  cli.py  compare.py  config.py  context_state.py  create_plan.py  create_scaffold.py  environment.py  execution_loop.py  maintain.py  models.py  next_actions.py  onboard.py  overview.py  policy.py  probe.py  provider_presets.py  report.py  routing.py  run_payload.py  runtime.py  runtime_adapter.py  runtime_control_policy.py  runtime_control_service.py  scaffold_export.py  secrets.py  setup.py  short_circuit.py  sll_adapter.py  sll_guidance.py  usage.py  verification.py  workspace.py
docs/: apply_check.md  apply_confirm.md  backups_restore.md  batch_operation_rfc.md  cli_architecture.md  commands.md  config.md  context.md  create.md  demo_workflow.md  http_adapter.md  http_mcp_server_design.md  http_mcp_server_design_phase5a.md  maintain.md  mcp_adapter.md  mcp_runtime_binding.md  multi_file_feature_execution_rfc.md  operations.md  policy.md  providers.md  python_api_reference.md  python_api_surface_phase4a.md  runtime_modularization_rfc.md  sll_integration.md  transport_contracts.md  transport_contracts_phase5b.md  v0_3_validation.md  v0_4_patch_proposal_validation.md  workspace.md
tests/: conftest.py  helpers.py  test_aegis_adapter.py  test_aegis_client.py  test_aegis_client_integration.py  test_aegis_impact.py  test_api_surface.py  test_apply_check.py  test_backups_restore.py  test_batch_schema.py  (+85 more)
(+88 files in other folders)
